<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="move_left">Left</string>
    <string name="move_right">Right</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="play">Play</string>
    <string name="timerValue">%1$d</string>
    <string name="downTimerValue">Time left: %1$d</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="textview">Press Play</string>
    <string name="textview2">Count Down</string>
    <string name="levels">Level:</string>
    <string name="totalpoints">Total Points:</string>
</resources>
